; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/extr_aio.c_timeout_func.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/extr_aio.c_timeout_func.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.aio_timeout = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @timeout_func to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @timeout_func(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.aio_timeout*, align 8
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* %2, align 8
  %5 = inttoptr i64 %4 to %struct.aio_timeout*
  store %struct.aio_timeout* %5, %struct.aio_timeout** %3, align 8
  %6 = load %struct.aio_timeout*, %struct.aio_timeout** %3, align 8
  %7 = getelementptr inbounds %struct.aio_timeout, %struct.aio_timeout* %6, i32 0, i32 0
  store i32 1, i32* %7, align 4
  %8 = load %struct.aio_timeout*, %struct.aio_timeout** %3, align 8
  %9 = getelementptr inbounds %struct.aio_timeout, %struct.aio_timeout* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @wake_up_process(i32 %10)
  ret void
}

declare dso_local i32 @wake_up_process(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
